タイトルの変更

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>移動効率化アプリ</title>
+    <title>移動時間計測アプリ！</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
