--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>移動時間計測アプリ！</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- Google tag (gtag.js)
+    グーグルアナリティクス要の設定 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XNQ4NC4CD2"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-XNQ4NC4CD2');
+</script>
 
 <body>
     <div class="container">
